# xdg-desktop-portal-aperture

./: .gitignore  CMakeLists.txt  README.md
config/: aperture.portal  org.freedesktop.impl.portal.desktop.aperture.service  xdg-desktop-portal-aperture.service
src/: DesktopPortal.cpp  DesktopPortal.h  FreedesktopProvider.cpp  FreedesktopProvider.h  GnomeDarkModeProvider.cpp  GnomeDarkModeProvider.h  KdeProvider.cpp  KdeProvider.h  Settings.cpp  Settings.h  main.cpp
